--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "lint": "npm run lint"
+    "build": "npm run build --if-present"
   },
   "keywords": [],
   "author": "",
