--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "lint": "eslint **/*.js --ignore-pattern node_modules/ --fix"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,8 @@
     "jest": "^29.3.1",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "eslint": "^8.30.0"
   }
 }
