--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "jest": "^29.3.1",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^9.4.1",
     "mongoose": "^6.8.0",
+    "nodemailer": "^6.9.8",
     "nodemon": "^2.0.20"
   }
 }
